--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -39,7 +39,7 @@
                         </td>
                         <td>
                             <button class="btn btn-danger btn-sm">Delete</button>
-                            <a class="btn btn-success text-white" btn-sm>Edit</a>
+                            <a class="btn btn-success btn-sm text-white" btn-sm>Edit</a>
                         </td>
                     </tr>
                 }
